--- a/CocoaExport/Properties/Resources.resx
+++ b/CocoaExport/Properties/Resources.resx
@@ -118,14 +118,20 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Logo CocoaExport Proyect" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Logo CocoaExport Proyect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="1444595857_add_user" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1444595857_add_user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="list-add-user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\list-add-user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Logo CocoaExport Proyect1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Logo CocoaExport Proyect1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Carpeta" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Carpeta.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="IconoCocoa1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IconoCocoa1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="1443814210_fine_print" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1443814210_fine_print.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,10 +160,13 @@
   <data name="Login-Manager" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Login-Manager.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="1444595857_add_user" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\1444595857_add_user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Logo CocoaExport Proyect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Logo CocoaExport Proyect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Logo CocoaExport Proyect1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Logo CocoaExport Proyect1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="IconoCocoa" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IconoCocoa.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Logo CocoaExport 2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Logo CocoaExport 2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
